# polimiaer

./: .gitignore  README.md  formulario.c
.obsidian/: workspace.json
Geronimo/: CMakeLists.txt  Geronimo_main.c
pacman/: .gitignore  CMakeLists.txt
pacman/include/: game.h
pacman/include/SDL2/: SDL_main.h
pacman/res/: maze.c
pacman/src/: game.c  main.c
snippets/: arrays.c  base notions.c  examplefileex.c  files.c  giochi.c  strings.c  triangolo di tartaglia.c
